--- a/ReactPractice/portfolio-practiceproject-react/index.html
+++ b/ReactPractice/portfolio-practiceproject-react/index.html
@@ -11,7 +11,7 @@
 
     <title>portfolio-practiceproject-react</title>
   </head>
-  <body>
+  <body class="min-h-screen lg:h-[30vw]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
